--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-orientation-android-build-fix",
-  "version": "3.1.3",
+  "version": "3.1.4",
   "description": "Listen to device orientation changes in React Native applications and programmatically set preferred orientations on a per screen basis",
   "main": "index.js",
   "scripts": {
@@ -25,17 +25,21 @@
     {
       "name" : "Aleksi Pousar",
       "email" : "aleksi1578@msn.com"
+    },
+    {
+      "name" : "DeepCode",
+      "email" : "http://www.deepcode.site"
     }
   ],
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yamill/react-native-orientation.git"
+    "url": "git+https://github.com/DeepRolling/react-native-orientation-android-build-fix.git"
   },
   "bugs": {
-    "url": "https://github.com/yamill/react-native-orientation/issues"
+    "url": "https://github.com/DeepRolling/react-native-orientation-android-build-fix/issues"
   },
-  "homepage": "https://github.com/yamill/react-native-orientation#readme",
+  "homepage": "https://github.com/DeepRolling/react-native-orientation-android-build-fix#readme",
   "rnpm": {
     "android": {
       "packageInstance": "new OrientationPackage()"
